--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^2.0.15",
     "eventsource-parser": "^0.1.0",
     "highlight.js": "^11.7.0",
+    "js-cookie": "^3.0.1",
     "katex": "^0.6.0",
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
