--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "novel-gpt",
+  "name": "chatgpt-api-demo",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -7,10 +7,12 @@
     "start": "astro dev",
     "build": "astro build",
     "build:vercel": "OUTPUT=vercel astro build",
+    "build:netlify": "OUTPUT=netlify astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "2.0.0",
     "@astrojs/node": "^5.0.4",
     "@astrojs/solid-js": "^2.0.2",
     "@astrojs/vercel": "^3.1.3",
@@ -20,17 +22,18 @@
     "highlight.js": "^11.7.0",
     "js-sha256": "^0.9.0",
     "katex": "^0.6.0",
-    "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-katex": "^2.0.3",
-    "solid-js": "^1.6.11",
+    "solid-js": "1.6.12",
     "solidjs-use": "^1.2.0",
     "undici": "^5.20.0"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.16",
     "@types/markdown-it": "^12.2.3",
     "@unocss/preset-attributify": "^0.50.1",
+    "@unocss/preset-icons": "^0.50.4",
     "@unocss/preset-typography": "^0.50.3",
     "punycode": "^2.3.0",
     "unocss": "^0.50.1"
