--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/node": "^5.0.4",
     "@astrojs/solid-js": "^2.0.2",
     "@astrojs/vercel": "^3.1.3",
+    "@h7ml/badwords": "^0.0.3",
     "@unocss/reset": "^0.50.1",
     "astro": "^2.0.15",
     "eventsource-parser": "^0.1.0",
