--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,8 @@
 [build.environment]
   NETLIFY_USE_PNPM = "true"
   NODE_VERSION = "18"
+
 [build]
   command = "OUTPUT=netlify astro build"
   functions = "netlify/functions"
-  publish = "dist/"
-[[edge_functions]]
-  path = "/"
-  function = "geolocation"
+  publish = "dist"
