--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.2.1",
     "@astrojs/netlify": "2.0.0",
     "@astrojs/node": "^5.0.4",
     "@astrojs/solid-js": "^2.0.2",
     "@astrojs/vercel": "^3.1.3",
+    "@nanostores/solid": "^0.3.2",
+    "@types/alpinejs": "^3.0.0",
     "@unocss/reset": "^0.50.1",
+    "alpinejs": "^3.0.0",
     "astro": "^2.0.15",
     "eventsource-parser": "^0.1.0",
     "highlight.js": "^11.7.0",
@@ -25,6 +29,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-katex": "^2.0.3",
+    "nanostores": "^0.7.4",
     "solid-js": "1.6.12",
     "solidjs-use": "^1.2.0",
     "undici": "^5.20.0"
