chore: update pnpm version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chatgpt-api-demo",
   "version": "0.0.1",
+  "packageManager": "pnpm@7.28.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
