--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "markdown-it-katex": "^2.0.3",
     "nanostores": "^0.7.4",
     "solid-js": "1.6.12",
-    "solidjs-use": "^1.2.0",
-    "undici": "^5.20.0"
+    "solidjs-use": "^1.2.0"
   },
   "devDependencies": {
+    "@evan-yang/eslint-config": "^1.0.1",
     "@iconify-json/carbon": "^1.1.16",
     "@types/markdown-it": "^12.2.3",
     "@typescript-eslint/parser": "^5.54.1",
@@ -46,7 +46,6 @@
     "@unocss/preset-typography": "^0.50.3",
     "eslint-plugin-astro": "^0.24.0",
     "punycode": "^2.3.0",
-    "unocss": "^0.50.1",
-    "@evan-yang/eslint-config": "^1.0.1"
+    "unocss": "^0.50.1"
   }
 }
