--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-katex": "^2.0.3",
+    "micromark": "^3.1.0",
+    "micromark-extension-gfm": "^2.0.1",
     "nanostores": "^0.7.4",
     "solid-js": "1.6.12",
     "solidjs-use": "^1.2.0"
