Enable image support and version recording.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['main']
+    tags: 
+      - '*'
 
 env:
   REGISTRY: ghcr.io
