--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Your API Key for OpenAI
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Custom base url for OpenAI API. default: https://api.openai.com
