--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Your API Key for OpenAI
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Custom base url for OpenAI API. default: https://api.openai.com
-OPENAI_API_BASE_URL=
+OPENAI_API_BASE_URL=http://openai-proxy.openai-proxy.1017719748317089.us-west-1.fc.devsapp.net
 # Inject analytics or other scripts before </head> of the page
 HEAD_SCRIPTS=
 # Secret string for the project. Use for generating signatures for API calls
