--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "undici": "^5.20.0"
   },
   "devDependencies": {
+    "@evan-yang/eslint-config": "^1.0.1",
     "@iconify-json/carbon": "^1.1.16",
     "@types/markdown-it": "^12.2.3",
     "@typescript-eslint/parser": "^5.54.1",
@@ -40,9 +41,9 @@
     "@unocss/preset-icons": "^0.50.4",
     "@unocss/preset-typography": "^0.50.3",
     "eslint-plugin-astro": "^0.24.0",
+    "netlify-cli": "^15.1.1",
     "punycode": "^2.3.0",
     "unocss": "^0.50.1",
-    "@evan-yang/eslint-config": "^1.0.1",
     "vite-plugin-pwa": "^0.14.1"
   }
 }
